src/test/ui/wf/wf-in-obj-type-trait.stderr
error[E0277]: the trait bound `T: std::marker::Copy` is not satisfied
  --> $DIR/wf-in-obj-type-trait.rs:11:5
   |
LL | struct MustBeCopy<T:Copy> {
   | ------------------------- required by `MustBeCopy`
...
LL | struct Bar<T> {
   |            - help: consider restricting this bound: `T: std::marker::Copy`
LL |     // needs T: Copy
LL |     x: dyn Object<MustBeCopy<T>>
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `std::marker::Copy` is not implemented for `T`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
